# XCLiveViewer_DataMock

./: Cargo.toml
src/: main.rs  utils.rs  xcmock.rs
src/data/: country.rs  flight_data.rs  flight_id.rs  mod.rs  pilot_info.rs
src/xcmock/: connection.rs  database.rs  datagen.rs  mod.rs  server.rs
