[package]
name = "xc_mock"
version = "0.1.0"
authors = ["Finomnis <finomnis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7.1"
tokio = { version = "0.2.17", features = ["full"] }
tungstenite = "0.10.1"
tokio-tungstenite = "0.10.1"
futures = "0.3.4"
async-ctrlc = "1.0.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
uuid = { version = "0.8", features = ["v4"] }
rand = { version = "0.7", features = ["small_rng"]}
